Add metrics subsystem (#193)